Fix more unchecked exceptions